Fix footer overlap on small displays

--- a/Assignments/RestaurantSite/styles/restaurantStyles.css
+++ b/Assignments/RestaurantSite/styles/restaurantStyles.css
@@ -8,6 +8,11 @@ html, body {
     height: 100%;
 }
 
+main {
+    /* Allow room for fixed footer */
+    margin-bottom: 5em;
+}
+
 body {
     background-image: url('/images/bg-1920w.jpg');
     background-position: center;
